--- a/dashboard.html
+++ b/dashboard.html
@@ -29,11 +29,11 @@
             </div>
 
             <div class="control1"> 
-                <div class="control-element1" id="foodBtn"><a href="#"> <img src="images/back.png" alt="Back To Dashboard"> </a> </div>     
-                <div class="control-element1" id="shoppingBtn"><a href="#"> <img src="images/search.png" alt="Search"> </a> </div>
-                <div class="control-element1" id="touristBtn"><a href="#"> <img src="images/goto.png" alt="Go To"> </a> </div>
-                <div class="control-element1" id="cityTourBtn"><a href="#"> <img src="images/draw.png" alt="Draw Path"> </a> </div>
-                <div class="control-element1" id="healthBtn"><a href="#"> <img src="images/profile.png" alt="Profile"> </a> </div>
+                <div class="control-element1" id="foodBtn"><a href="#"> <img src="images/food.png" alt="Back To Dashboard"> </a> </div>     
+                <div class="control-element1" id="shoppingBtn"><a href="#"> <img src="images/shopping.png" alt="Search"> </a> </div>
+                <div class="control-element1" id="touristBtn"><a href="#"> <img src="images/tourists.png" alt="Go To"> </a> </div>
+                <div class="control-element1" id="cityTourBtn"><a href="#"> <img src="images/cityTour.png" alt="Draw Path"> </a> </div>
+                <div class="control-element1" id="healthBtn"><a href="#"> <img src="images/health.png" alt="Profile"> </a> </div>
             </div>
         </div>
     </div>
