--- a/dashboard.html
+++ b/dashboard.html
@@ -26,6 +26,42 @@
                         <p>Obj 2</p>
                     </a>
                 </div>
+                <div class="element">
+                    <a href="#">
+                        <img src="https://picsum.photos/seed/picsum/60/60" alt="1" >
+                        <p>Obj 3</p>
+                    </a>
+                </div>
+                <div class="element">
+                    <a href="#">
+                        <img src="https://picsum.photos/seed/picsum/60/60" alt="1" >
+                        <p>Obj 4</p>
+                    </a>
+                </div>
+                <div class="element">
+                    <a href="#">
+                        <img src="https://picsum.photos/seed/picsum/60/60" alt="1" >
+                        <p>Obj 5</p>
+                    </a>
+                </div>
+                <div class="element">
+                    <a href="#">
+                        <img src="https://picsum.photos/seed/picsum/60/60" alt="1" >
+                        <p>Obj 6</p>
+                    </a>
+                </div>
+                <div class="element">
+                    <a href="#">
+                        <img src="https://picsum.photos/seed/picsum/60/60" alt="1" >
+                        <p>Obj 7</p>
+                    </a>
+                </div>
+                <div class="element">
+                    <a href="#">
+                        <img src="https://picsum.photos/seed/picsum/60/60" alt="1" >
+                        <p>Obj 8</p>
+                    </a>
+                </div>
             </div>
 
             <div class="control1"> 
