--- a/topAttraction.html
+++ b/topAttraction.html
@@ -15,35 +15,59 @@
 <!-- Top attraction page starts here... -->
 
 <div class="top-attraction">
-    <div class="attraction">
-        <h1>Durga Temple</h1>
-        <p>The Sankatmochan Hanumaan temple is situated by the Ganga river and was built in 1990s by the freedom fighter Pandit Madan Mohan Malaviya. It is dedicated to Lord Rama and Hanuman.</p>
-        <img src="https://picsum.photos/seed/picsum/100/100" alt="" srcset="">
+    <div class="favourite-place-card-container" style="cursor: pointer;" id="btn">
+        <div style="margin-right:10px">
+            <h1 class="favourite-place-card-heading">Ganges River</h1>
+            <p class="favourite-place-card-description">
+                Named after the Hindu goddess Ganga, the Ganges River is one of the most revered natural sites in India
+            </p>
+        </div>
+        <img src="images/ganga2.png" class="favourite-place-card-image" style="margin-top:5px" />
     </div>
-    <div class="attraction">
-        <h1>Durga Temple</h1>
-        <p>The Sankatmochan Hanumaan temple is situated by the Ganga river and was built in 1990s by the freedom fighter Pandit Madan Mohan Malaviya. It is dedicated to Lord Rama and Hanuman.</p>
-        <img src="https://picsum.photos/seed/picsum/100/100" alt="" srcset="">
+    <div class="favourite-place-card-container" style="cursor: pointer;">
+        <div style="margin-right:10px">
+            <h1 class="favourite-place-card-heading">Shri Kashi Vishwanath Temple</h1>
+            <p class="favourite-place-card-description">
+                The impressive structure, dedicated to the Hindu deity Shiva, has earned the nickname "The Golden Temple" for its striking spire — plated in some 800 kilograms of pure gold
+            </p>
+        </div>
+        <img src="images/bgimage.jpg" class="favourite-place-card-image" />
     </div>
-    <div class="attraction">
-        <h1>Durga Temple</h1>
-        <p>The Sankatmochan Hanumaan temple is situated by the Ganga river and was built in 1990s by the freedom fighter Pandit Madan Mohan Malaviya. It is dedicated to Lord Rama and Hanuman.</p>
-        <img src="https://picsum.photos/seed/picsum/100/100" alt="" srcset="">
+    <div class="favourite-place-card-container" style="cursor: pointer;">
+        <div style="margin-right:10px">
+            <h1 class="favourite-place-card-heading">Assi Ghat</h1>
+            <p class="favourite-place-card-description">
+                Assi Ghat's star attraction is a Shiva lingam (phallic representation of the Hindu deity) beneath a sacred fig tree
+            </p>
+        </div>
+        <img src="images/bgimage.jpg" class="favourite-place-card-image" />
     </div>
-    <div class="attraction">
-        <h1>Durga Temple</h1>
-        <p>The Sankatmochan Hanumaan temple is situated by the Ganga river and was built in 1990s by the freedom fighter Pandit Madan Mohan Malaviya. It is dedicated to Lord Rama and Hanuman.</p>
-        <img src="https://picsum.photos/seed/picsum/100/100" alt="" srcset="">
+    <div class="favourite-place-card-container" style="cursor: pointer;" target="_self">
+        <div style="margin-right:10px">
+            <h1 class="favourite-place-card-heading">New kashi Vishwanath Temple</h1>
+            <p class="favourite-place-card-description">
+                The New Vishwanath Temple is every pious man's go-to destination to feel overwhelmed by the presence and power of the great Lord Shiva.
+            </p>
+        </div>
+        <img src="images/bgimage.jpg" class="favourite-place-card-image" />
     </div>
-    <div class="attraction">
-        <h1>Durga Temple</h1>
-        <p>The Sankatmochan Hanumaan temple is situated by the Ganga river and was built in 1990s by the freedom fighter Pandit Madan Mohan Malaviya. It is dedicated to Lord Rama and Hanuman.</p>
-        <img src="https://picsum.photos/seed/picsum/100/100" alt="" srcset="">
+    <div class="favourite-place-card-container" style="cursor: pointer;" target="_self">
+        <div style="margin-right:10px">
+            <h1 class="favourite-place-card-heading">RamNagar Fort</h1>
+            <p class="favourite-place-card-description">
+                There are few destinations in India without a fort, and Varanasi is no exception. About 14 kilometers from the city center, we'll find Ramnagar Fort.
+            </p>
+        </div>
+        <img src="images/bgimage.jpg" class="favourite-place-card-image" />
     </div>
-    <div class="attraction">
-        <h1>Durga Temple</h1>
-        <p>The Sankatmochan Hanumaan temple is situated by the Ganga river and was built in 1990s by the freedom fighter Pandit Madan Mohan Malaviya. It is dedicated to Lord Rama and Hanuman.</p>
-        <img src="https://picsum.photos/seed/picsum/100/100" alt="" srcset="">
+    <div class="favourite-place-card-container" style="cursor: pointer; margin-bottom:6%;" target="_self">
+        <div  style="margin-right:10px;">
+            <h1 class="favourite-place-card-heading">Alamgir Mosque</h1>
+            <p class="favourite-place-card-description">
+                Alamgir Mosque is a 17th century structure built by Mughal Emperor, Aurangzeb, on a land which once had a Shiva Temple and was demolished by him.
+            </p>
+        </div>
+        <img src="images/bgimage.jpg" class="favourite-place-card-image" />
     </div>
 </div>
 
@@ -76,6 +100,6 @@
     </div>
 
 
-    <script src="javascript/dashboard.js"></script>
+    <script src="javascript/topAttraction.js"></script>
 </body>
 </html>
