--- a/recreation.html
+++ b/recreation.html
@@ -12,66 +12,49 @@
     <div class="big-container">
         <div class="title"><h2>Varanasi Tourism Services</h2></div>
 
-<!-- Top attraction page starts here... -->
+<!-- Recreation page starts here... -->
 
 <div class="top-attraction">
     <div class="favourite-place-card-container" style="cursor: pointer;" id="btn-1">
         <div style="margin-right:10px">
-            <h1 class="favourite-place-card-heading">Ganges River</h1>
+            <h1 class="favourite-place-card-heading">Varanasi Boating</h1>
             <p class="favourite-place-card-description">
-                Named after the Hindu goddess Ganga, the Ganges River is one of the most revered natural sites in India
+                As you undertake the Kashi boat ride on the holy river Ganga, immerse yourself in the sacred atmosphere and visit the 5000 year old Adi Keshav Ghat as well.
             </p>
         </div>
-        <img src="images/ganga2.png" class="favourite-place-card-image" style="margin-top:5px" />
+        <img src="images/boating.png" class="favourite-place-card-image" style="margin-top:5px" />
     </div>
     <div class="favourite-place-card-container" style="cursor: pointer;" id="btn-2">
         <div style="margin-right:10px">
-            <h1 class="favourite-place-card-heading">Shri Kashi Vishwanath Temple</h1>
+            <h1 class="favourite-place-card-heading">Ganga Aarati</h1>
             <p class="favourite-place-card-description">
-                The impressive structure, dedicated to the Hindu deity Shiva, has earned the nickname "The Golden Temple" for its striking spire — plated in some 800 kilograms of pure gold
+                Go on a spiritual journey as you undertake the boat ride on the holy river Ganga and observe the religious rituals being conducted on the Ghats of Varanasi, one of the oldest cities in the world.
             </p>
         </div>
-        <img src="images/bgimage.jpg" class="favourite-place-card-image" />
+        <img src="images/gangaAarti.png" class="favourite-place-card-image" style="margin-top:5px" />
     </div>
     <div class="favourite-place-card-container" style="cursor: pointer;" id="btn-3">
         <div style="margin-right:10px">
-            <h1 class="favourite-place-card-heading">Assi Ghat</h1>
+            <h1 class="favourite-place-card-heading">Sunrise Yoga At Ghats</h1>
             <p class="favourite-place-card-description">
-                Assi Ghat's star attraction is a Shiva lingam (phallic representation of the Hindu deity) beneath a sacred fig tree
+                The spiritual place varanasi offers you the best opportunity to exolore this body and mind by the traditional yogic tools.
             </p>
         </div>
-        <img src="images/bgimage.jpg" class="favourite-place-card-image" />
+        <img src="images/yoga.png" class="favourite-place-card-image" style="margin-top:5px" />
     </div>
-    <div class="favourite-place-card-container" style="cursor: pointer;" target="_self" id="btn-4">
+    <div class="favourite-place-card-container" style="cursor: pointer;" id="btn-4">
         <div style="margin-right:10px">
-            <h1 class="favourite-place-card-heading">New kashi Vishwanath Temple</h1>
+            <h1 class="favourite-place-card-heading">Alakananda Cruise</h1>
             <p class="favourite-place-card-description">
-                The New Vishwanath Temple is every pious man's go-to destination to feel overwhelmed by the presence and power of the great Lord Shiva.
+                The sunrises and sunset at the one of the oldest spiritual city with a Cruise Ship lashed with all modern ameneties might be your's cup of tea.
             </p>
         </div>
-        <img src="images/bgimage.jpg" class="favourite-place-card-image" />
+        <img src="images/alakananda.png" class="favourite-place-card-image" style="margin-top:5px" />
     </div>
-    <div class="favourite-place-card-container" style="cursor: pointer;" target="_self" id="btn-5">
-        <div style="margin-right:10px">
-            <h1 class="favourite-place-card-heading">RamNagar Fort</h1>
-            <p class="favourite-place-card-description">
-                There are few destinations in India without a fort, and Varanasi is no exception. About 14 kilometers from the city center, we'll find Ramnagar Fort.
-            </p>
-        </div>
-        <img src="images/bgimage.jpg" class="favourite-place-card-image" />
-    </div>
-    <div class="favourite-place-card-container" style="cursor: pointer; margin-bottom:12%;" target="_self" id="btn-6">
-        <div  style="margin-right:10px;">
-            <h1 class="favourite-place-card-heading">Alamgir Mosque</h1>
-            <p class="favourite-place-card-description">
-                Alamgir Mosque is a 17th century structure built by Mughal Emperor, Aurangzeb, on a land which once had a Shiva Temple and was demolished by him.
-            </p>
-        </div>
-        <img src="images/bgimage.jpg" class="favourite-place-card-image" />
-    </div>
+    
 </div>
 
-<!-- Top Attraction Ends here -->
+<!-- Recreation Ends here -->
 
         <div class="container">
             <div class="scroller" id="change">
@@ -100,6 +83,6 @@
     </div>
 
     <script src="javascript/dashboard.js"></script>
-    <script src="javascript/topAttraction.js"></script>
+    <script src="javascript/recreation.js"></script>
 </body>
 </html>
