--- a/temples.html
+++ b/temples.html
@@ -14,60 +14,42 @@
 
 <!-- Top attraction page starts here... -->
 
-<div class="top-attraction">
+<div class="top-attraction ">
     <div class="favourite-place-card-container" style="cursor: pointer;" id="btn-1">
-        <div style="margin-right:10px">
-            <h1 class="favourite-place-card-heading">Ganges River</h1>
-            <p class="favourite-place-card-description">
-                Named after the Hindu goddess Ganga, the Ganges River is one of the most revered natural sites in India
-            </p>
-        </div>
-        <img src="images/ganga2.png" class="favourite-place-card-image" style="margin-top:5px" />
-    </div>
-    <div class="favourite-place-card-container" style="cursor: pointer;" id="btn-2">
         <div style="margin-right:10px">
             <h1 class="favourite-place-card-heading">Shri Kashi Vishwanath Temple</h1>
             <p class="favourite-place-card-description">
                 The impressive structure, dedicated to the Hindu deity Shiva, has earned the nickname "The Golden Temple" for its striking spire — plated in some 800 kilograms of pure gold
             </p>
         </div>
-        <img src="images/bgimage.jpg" class="favourite-place-card-image" />
+        <img src="images/kashivishwa.png" class="favourite-place-card-image" />
     </div>
-    <div class="favourite-place-card-container" style="cursor: pointer;" id="btn-3">
-        <div style="margin-right:10px">
-            <h1 class="favourite-place-card-heading">Assi Ghat</h1>
-            <p class="favourite-place-card-description">
-                Assi Ghat's star attraction is a Shiva lingam (phallic representation of the Hindu deity) beneath a sacred fig tree
-            </p>
-        </div>
-        <img src="images/bgimage.jpg" class="favourite-place-card-image" />
-    </div>
-    <div class="favourite-place-card-container" style="cursor: pointer;" target="_self" id="btn-4">
+    <div class="favourite-place-card-container" style="cursor: pointer;" target="_self"  id="btn-2">
         <div style="margin-right:10px">
             <h1 class="favourite-place-card-heading">New kashi Vishwanath Temple</h1>
             <p class="favourite-place-card-description">
                 The New Vishwanath Temple is every pious man's go-to destination to feel overwhelmed by the presence and power of the great Lord Shiva.
             </p>
         </div>
-        <img src="images/bgimage.jpg" class="favourite-place-card-image" />
+        <img src="images/newkashi.png" class="favourite-place-card-image" />
     </div>
-    <div class="favourite-place-card-container" style="cursor: pointer;" target="_self" id="btn-5">
+    <div class="favourite-place-card-container" style="cursor: pointer;" target="_self"  id="btn-3">
         <div style="margin-right:10px">
-            <h1 class="favourite-place-card-heading">RamNagar Fort</h1>
+            <h1 class="favourite-place-card-heading">Sankat Mochan Temple</h1>
             <p class="favourite-place-card-description">
-                There are few destinations in India without a fort, and Varanasi is no exception. About 14 kilometers from the city center, we'll find Ramnagar Fort.
+                The Sankat Mochan Hanuman Temple is situated by the River Assi and was built in the 1900s by the freedom fighter Pandit Madan Mohan Malviya. It is dedicated to Lord Rama and Hanuman.
             </p>
         </div>
-        <img src="images/bgimage.jpg" class="favourite-place-card-image" />
+        <img src="images/sankatmochan.png" class="favourite-place-card-image" />
     </div>
-    <div class="favourite-place-card-container" style="cursor: pointer; margin-bottom:12%;" target="_self" id="btn-6">
-        <div  style="margin-right:10px;">
-            <h1 class="favourite-place-card-heading">Alamgir Mosque</h1>
+    <div class="favourite-place-card-container" style="cursor: pointer; margin-bottom:12%" target="_self"  id="btn-4">
+        <div style="margin-right:10px">
+            <h1 class="favourite-place-card-heading">Durga Temple</h1>
             <p class="favourite-place-card-description">
-                Alamgir Mosque is a 17th century structure built by Mughal Emperor, Aurangzeb, on a land which once had a Shiva Temple and was demolished by him.
+                Located near the Durga Ghat on the bank of the River Ganga, Durga Temple was built in the 18th century.
             </p>
         </div>
-        <img src="images/bgimage.jpg" class="favourite-place-card-image" />
+        <img src="images/durgatemple.png" class="favourite-place-card-image" />
     </div>
 </div>
 
@@ -99,7 +81,8 @@
         </div>
     </div>
 
+
     <script src="javascript/dashboard.js"></script>
-    <script src="javascript/topAttraction.js"></script>
+    <script src="javascript/temples.js"></script>
 </body>
 </html>
