--- a/topAttraction.html
+++ b/topAttraction.html
@@ -8,9 +8,7 @@
     <link rel="stylesheet" href="css/dashboard.css">
     <link rel="stylesheet" href="css/topAttraction.css">
 
-    <link href='https://api.mapbox.com/mapbox-gl-js/v2.1.0/mapbox-gl.css' rel='stylesheet' />
-    <script src='https://api.mapbox.com/mapbox-gl-js/v2.1.0/mapbox-gl.js'></script>
-    
+    <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
 </head>
 <body>
     <div class="title"><h2>Varanasi Tourism Services</h2></div>
@@ -81,13 +79,6 @@
         <div class="container">
             <div class="scroller" id="map-container">
                 <div id='map' style='height:100vh;'></div>
-                <script>
-                    mapboxgl.accessToken = 'pk.eyJ1IjoiYWRpdHlhMjAyMyIsImEiOiJja2tteDRzMmIxdmphMnZwZ28zNTBzYmgyIn0.1P-bsCr_lbQcBBFA4i8IMQ';
-                    var map = new mapboxgl.Map({
-                        container: 'map',
-                        style: 'mapbox://styles/aditya2023/ckkqx2u5f2j1n18mrimqk85ri',
-                    });
-                </script>
             </div>
 
 
@@ -107,6 +98,11 @@
         </div>
     </div>
 
+    <script
+      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDDbagPOfTmIv_byu0S5uX_1EPtWH2E67s&callback=initMap&libraries=&v=weekly"
+      async
+    ></script>
+    
     <script src="javascript/dashboard.js"></script>
     <script src="javascript/topAttraction.js"></script>
 </body>
