oneDay routing algo using google maps api

--- a/oneDay.html
+++ b/oneDay.html
@@ -65,6 +65,7 @@
 
         <div class="container">
             <div class="scroller" id="change">
+            <div id="directionsPanel"></div>
                 <!-- <div class="element">
                     <a href="#">
                         <img src="https://picsum.photos/seed/picsum/60/60" alt="1" >
