Finalizing OneDay.js...

--- a/oneDay.html
+++ b/oneDay.html
@@ -57,13 +57,13 @@
 
 <!-- Top Attraction Ends here -->
 
-        <div class="top-attraction2">
-            <hr style="border-width: unset;">
-            <button id="edit">Edit and Recalculate</button>
-            <p id="navDetail">The Navigation details will appear here...</p>
-        </div>
-
         <div class="container">
+            <hr style="border-width: 1px;">
+            <div class="buttons">
+                <button id="edit" class="del">Edit and Recalculate</button>
+                <button id="expand-collapse" class="del">👆</button>
+            </div>
+            <p id="navDetail" class="del">The Navigation details will appear here...</p>
             <div class="scroller" id="change">
             <div id="directionsPanel"></div>
                 <!-- <div class="element">
