--- a/twoDay.html
+++ b/twoDay.html
@@ -8,10 +8,7 @@
     <link rel="stylesheet" href="css/dashboard.css">
     <link rel="stylesheet" href="css/oneDay.css">
 
-    <script src='https://npmcdn.com/@turf/turf/turf.min.js'></script>
-    <script src='https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js'></script>
-    <script src='https://api.mapbox.com/mapbox-gl-js/v2.1.1/mapbox-gl.js'></script>
-    <link href='https://api.mapbox.com/mapbox-gl-js/v2.1.1/mapbox-gl.css' rel='stylesheet' />
+    <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
 </head>
 <body>
     <div class="big-container">
@@ -45,7 +42,7 @@
                 The impressive structure, dedicated to the Hindu deity Shiva, has earned the nickname "The Golden Temple" for its striking spire — plated in some 800 kilograms of pure gold
             </p>
         </div>
-        <img src="images/bgimage.jpg" class="favourite-place-card-image" />
+        <img src="images/kashivishwa.png" class="favourite-place-card-image" />
     </div>
     <div class="favourite-place-card-container" style="cursor: pointer;" target="_self" id="btn-4">
         <div style="margin-right:10px">
@@ -54,7 +51,7 @@
                 The New Vishwanath Temple is every pious man's go-to destination to feel overwhelmed by the presence and power of the great Lord Shiva.
             </p>
         </div>
-        <img src="images/bgimage.jpg" class="favourite-place-card-image" />
+        <img src="images/newkashi.png" class="favourite-place-card-image" />
     </div>
     <div class="favourite-place-card-container" style="cursor: pointer;" target="_self" id="btn-5">
         <div style="margin-right:10px">
@@ -63,7 +60,7 @@
                 There are few destinations in India without a fort, and Varanasi is no exception. About 14 kilometers from the city center, we'll find Ramnagar Fort.
             </p>
         </div>
-        <img src="images/bgimage.jpg" class="favourite-place-card-image" />
+        <img src="images/kedarghat.png" class="favourite-place-card-image" />
     </div>
 
 </div>
@@ -73,37 +70,42 @@
 <div class="top-attraction2">
     <hr style="border-width: unset;">
     <button id="edit">Edit and Recalculate</button>
-    <p>The Navigation details will appear here...</p>
+    <p id="navDetail">The Navigation details will appear here...</p>
 </div>
 
-        <div class="container">
-            <div class="scroller" id="change">
-                <!-- <div class="element">
-                    <a href="#">
-                        <img src="https://picsum.photos/seed/picsum/60/60" alt="1" >
-                        <p>Obj 1</p>
-                    </a>
-                </div>
-                <div class="element">
-                    <a href="#">
-                        <img src="https://picsum.photos/seed/picsum/60/60" alt="1" >
-                        <p>Obj 2</p>
-                    </a>
-                </div> -->
-            </div>
-
-            <div class="control1"> 
-                <div class="control-element1" id="foodBtn"><a href="#"> <img src="images/food2.png" alt="Back To Dashboard"> </a> </div>     
-                <div class="control-element1" id="shoppingBtn"><a href="#"> <img src="images/shopping2.png" alt="Search"> </a> </div>
-                <div class="control-element1" id="touristBtn"><a href="#"> <img src="images/tourists2.png" alt="Go To"> </a> </div>
-                <div class="control-element1" id="cityTourBtn"><a href="#"> <img src="images/cityTour2.png" alt="Draw Path"> </a> </div>
-                <div class="control-element1" id="healthBtn"><a href="#"> <img src="images/health2.png" alt="Profile"> </a> </div>
-            </div>
+<div class="container">
+    <div class="scroller" id="change">
+    <div id="directionsPanel"></div>
+        <!-- <div class="element">
+            <a href="#">
+                <img src="https://picsum.photos/seed/picsum/60/60" alt="1" >
+                <p>Obj 1</p>
+            </a>
         </div>
+        <div class="element">
+            <a href="#">
+                <img src="https://picsum.photos/seed/picsum/60/60" alt="1" >
+                <p>Obj 2</p>
+            </a>
+        </div> -->
     </div>
 
+    <div class="control1"> 
+        <div class="control-element1" id="foodBtn"><a href="#"> <img src="images/food2.png" alt="Back To Dashboard"> </a> </div>     
+        <div class="control-element1" id="shoppingBtn"><a href="#"> <img src="images/shopping2.png" alt="Search"> </a> </div>
+        <div class="control-element1" id="touristBtn"><a href="#"> <img src="images/tourists2.png" alt="Go To"> </a> </div>
+        <div class="control-element1" id="cityTourBtn"><a href="#"> <img src="images/cityTour2.png" alt="Draw Path"> </a> </div>
+        <div class="control-element1" id="healthBtn"><a href="#"> <img src="images/health2.png" alt="Profile"> </a> </div>
+    </div>
+</div>
+</div>
 
-    <script src="javascript/dashboard.js"></script>
-    <script src="javascript/twoDay.js"></script>
+
+<script src="javascript/dashboard.js"></script>
+<script src="javascript/twoDay.js"></script>
+<script
+src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDDbagPOfTmIv_byu0S5uX_1EPtWH2E67s&callback=initMap&libraries=&v=weekly"
+async
+></script>
 </body>
 </html>
