--- a/dashboard.html
+++ b/dashboard.html
@@ -4,8 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
+    <meta name="theme-color" content="#95B6E2"> 
+    <link rel="apple-touch-icon" href="images/logo192.png">
     <title>Dashboard</title>
     <link rel="stylesheet" href="css/dashboard.css">
+    <!-- <link rel="manifest" href="manifest.json"> -->
 </head>
 <body>
     <div class="big-container">
