--- a/oneDay.html
+++ b/oneDay.html
@@ -63,7 +63,7 @@
                 <button id="edit" class="del">Edit and Recalculate</button>
                 <button id="expand-collapse" class="del">👆</button>
             </div>
-            <p id="navDetail" class="del">The Navigation details will appear here...</p>
+            <p id="navDetail" class="del"></p>
             <div class="scroller" id="change">
             <div id="directionsPanel"></div>
                 <!-- <div class="element">
