--- a/twoDay.html
+++ b/twoDay.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
+    <meta name="viewport" content="user-scalable=no">
     <title>Dashboard</title>
     <link rel="stylesheet" href="css/dashboard.css">
     <link rel="stylesheet" href="css/oneDay.css">
@@ -67,13 +67,13 @@
 
 <!-- Top Attraction Ends here -->
 
-<div class="top-attraction2">
-    <hr style="border-width: unset;">
-    <button id="edit">Edit and Recalculate</button>
-    <p id="navDetail">The Navigation details will appear here...</p>
-</div>
-
 <div class="container">
+    <hr style="border-width: 1px;">
+    <div class="buttons">
+        <button id="edit" class="del">Edit and Recalculate</button>
+        <button id="expand-collapse" class="del">👆</button>
+    </div>
+    <p id="navDetail" class="del"></p>
     <div class="scroller" id="change">
     <div id="directionsPanel"></div>
         <!-- <div class="element">
